--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a class="text-danger text-decoration-none" href="#"><i class="bi bi-cart fs-3"></i>Cart</a>
+                    <a class="text-danger text-decoration-none cart" href="#"><i class="bi bi-cart fs-3"></i>Cart</a>
                 </div>
             </div>
         </nav>
@@ -48,6 +48,11 @@
         <section>
             <div class="container mt-5">
                 <h1 class="mt-3 text-white fw-bold">New Games:</h1>
+                <div class="d-flex justify-content-center">
+                    <div class="spinner-border text-light" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
                 <div
                     class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-sm-2 g-md-3 g-lg-4 g-xl-5 mt-2 append">
                 </div>
